Cache MC metadata for use when their servers are flaky so meta can always start